Adding client name to the fields returned by delegation operations
