# docs/tms_openapi.yml
@@ -435,7 +435,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/TmsErrorResponse'
 
-  "/delegations/{client_id}/{delegation_id}":
+  "/delegations/{client_name}/{delegation_id}":
     delete:
       tags:
         - Delegations
@@ -722,6 +722,8 @@ components:
           type: integer
           format: int32
         client_id:
+          type: string
+        client_name:
           type: string
         rp_account:
           type: string
